# dashboard

./: .gitignore  CRONOGRAMA.md  ENVIRONMENT_SETUP.md  ENVIRONMENT_VARIABLES.md  FIREBASE_SETUP.md  FIREBASE_SETUP_GUIDE.md  PENTEST_REPORT.md  README.md  SIENGE_SETUP.md  VERCEL_ENV_SETUP.md  spec.md
.devin/workflows/: backend-dev-specialist.md  devops-security-specialist.md  qa-specialist.md  ux-ui-specialist.md
.github/workflows/: ci-cd.yml
backend/: .env.example  Dockerfile  Dockerfile.prod  docker-compose.prod.yml  pyproject.toml  run_pentest.py  seed_admin.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: admin.py  audit.py  auth.py  diagnostics.py  finance.py  marketing.py  query.py  users.py
backend/app/core/: config.py  firebase_client.py  security.py
backend/app/models/: finance.py
backend/app/services/: audit.py  cache.py  metrics.py  sienge.py  sienge_v2.py  supabase.py
backend/tests/: conftest.py  test_api_integration.py  test_audit_service.py  test_cache_service.py  test_main.py  test_performance.py  test_supabase_service.py
backend/tests/security/: test_auth_pentest.py  test_dos_pentest.py  test_headers_pentest.py  test_information_disclosure_pentest.py  test_injection_pentest.py  test_rbac_bypass_pentest.py
frontend/: .env.example  Dockerfile.prod  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
frontend/e2e/: auth.spec.ts  systems.spec.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ProtectedRoute.tsx  RoleGuard.tsx
(+12 files in other folders)
